--- a/a/index.html
+++ b/a/index.html
@@ -9,8 +9,8 @@
 <h1> Play Me!! </h1>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3qOsyqgNNko?&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/TKEbws4QhEk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tbsXmKrYgK4?&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/V1rQdAgbH9Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 </body>
 
