--- a/b/index.html
+++ b/b/index.html
@@ -9,9 +9,9 @@
 <h1> Play Me!! </h1>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/0VdoHnidz70?&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/A1c1zibBbwM?&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/q1oG32IrNP4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ScHzMY_MFa4?&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1SR8QrMPZMI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NU_ucawTff4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 </body>
 
