Import jQuery over https

--- a/experimental/control.html
+++ b/experimental/control.html
@@ -12,7 +12,7 @@
 <iframe id="vidobj" width="1280" height="500" src="https://pnandak1.github.io/experimental/playback.html" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><!-- https://www.youtube.com/embed/pGS435LTA2A -->
 
 <button>Add Number 1 and Number 2</button>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
 <script>
 // On mouse-over, execute myFunction
