Add id tag to button in the experimental playback page

--- a/experimental/playback.html
+++ b/experimental/playback.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-    <button>Play</button>
+    <button type="button"  id="Play" title="Play" class="button">Play</button>
     <div id="player"></div>
 
     <script>
